Desktop overflow-x fix

--- a/css/main.css
+++ b/css/main.css
@@ -35,6 +35,11 @@ p{
   margin-bottom: 5px;
 }
 
+.row{
+  margin-left:0!important;
+  margin-right:0!important;
+}
+
 .container-fluid {
   padding: 0;
 }
